# edrpc

./: Cargo.toml  README.md
src/: loadout.rs  main.rs  presence.rs  rpc.rs  state.rs  state_manager.rs  utils.rs
src/discord/: activity.rs  mod.rs
src/discord/rpc/: client.rs  mod.rs  op_code.rs  payload.rs  transport.rs
src/elite/: events.rs  journal_reader.rs  mod.rs  utils.rs
src/pipe/: errors.rs  mod.rs  transport.rs
src/rpc/: client.rs  errors.rs  transport.rs  utils.rs
