[package]
name = "edrpc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
tokio = { version = "1.49.0", features = ["io-util", "net", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["serde", "serde_json"] }
